--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,80 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+@custom-variant dark (&:is(.dark *));
+@theme inline {
 
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-text: var(--text);
+
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  /*--color-primary: var(--primary);*/
+  --color-primary-foreground: var(--primary-foreground);
+  /*--color-secondary: var(--secondary);*/
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  /*--color-accent: var(--accent);*/
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  
+}
+:root[data-theme='green'] {
+  --primary: #3138ce;
+  --secondary: #202583;
+  --tertiary: #101242;
+  --accent: #00ff2b;
+  --text: #D9D9D9;
+}
+
+:root[data-theme='pink'] {
+  --primary: #5e4134;
+  --secondary: #35241d;
+  --tertiary: #0d0907;
+  --accent: #ff00ce;
+  --text: #efa9d9;
+}
+
+:root[data-theme='blue'] {
+  --primary: #531253;
+  --secondary: #33032f;
+  --tertiary: #170312;
+  --accent: #00ffec;
+  --text: #c2fffb;
+}
+
+:root[data-theme='yellow'] {
+  --primary: #5998c5;
+  --secondary: #356e97;
+  --tertiary: #20425b;
+  --accent: #fff400;
+  --text: #fffac2;
+}
